# Deutsch_Learning_Platform

./:  - Copy.env  .dockerignore  .env.example  .env.nas  .gitignore  Dockerfile  Dockerfile.frontend  Dockerfile.standard  README.md  TRANSLATE-MODE-SPEC.md  add_examples_with_correct_case.py  add_manual_examples.py  analyze_excel.py  auto_fix_duplicates.py  backfill_lexicon.py  check_examples.py  check_missing_grammatical_info.py  clean_invalid_words.py  docker-compose.frontend.yml  docker-compose.yml  final_example_verification.py  final_verification_summary.py  fix_database_schema_mismatch.py  fix_duplicate_lemmas.py  fix_incomplete_database_entries.py  fix_specific_problems.py  german_vocabulary_A1_sample.xlsx  german_vocabulary_A2_sample.xlsx  german_vocabulary_B1_sample.xlsx  import_excel_vocabulary.py  migrate_phase2.py  nginx.conf  pdf_vocabulary_importer.py  pyproject.toml  remove_duplicate_translations.py  run_tests.py  simple_example_generator.py  simple_live_test.py  simple_word_cleaner.py  test_all_backend_endpoints.py  (+10 more)
.claude/: settings.local.json
MD/: CLAUDE.md  german-typo-search-fix.md  problem-analysis-incomplete-fix.md
app/: main.py  main_nas.py
docs/: CLAUDE.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  start-frontend.bat  tsconfig.tsbuildinfo  vite.config.ts
scripts/: README.md  excel_analyzer.py  excel_vocabulary_importer.py  improved_excel_importer.py  process_feedback_with_openai.py  send_email.py  vocabulary_manager.py
tests/: check_missing_tenses.py  check_recent_verbs.py  check_tense_values.py  (+18 more)
(+174 files in other folders)
